[fix] do not use sun internal classes, commons-codec to the rescue!
git-svn-id: https://elateportal.svn.sourceforge.net/svnroot/elateportal/trunk@1079 49e4f31f-544f-0410-8404-dcdff4eb5335