@@ -3,6 +3,7 @@ package de.thorstenberger.examServer.util;
 import java.io.IOException;
 import java.security.MessageDigest;
 
+import org.apache.commons.codec.binary.Base64;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 
@@ -82,8 +83,7 @@ public class StringUtil {
      * @return String
      */
     public static String encodeString(String str)  {
-        sun.misc.BASE64Encoder encoder = new sun.misc.BASE64Encoder();
-        return encoder.encodeBuffer(str.getBytes()).trim();
+        return new String(Base64.encodeBase64(str.getBytes()));
     }
 
     /**
@@ -93,11 +93,6 @@ public class StringUtil {
      * @return String
      */
     public static String decodeString(String str) {
-        sun.misc.BASE64Decoder dec = new sun.misc.BASE64Decoder();
-        try {
-            return new String(dec.decodeBuffer(str));
-        } catch (IOException io) {
-        	throw new RuntimeException(io.getMessage(), io.getCause());
-        }
+    	return new String(Base64.decodeBase64(str.getBytes())); 
     }
 }
